--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                 </div>
                 <div class="input-group">
                     <label>Mensaje</label>
-                    <textarea cols="50" rows="5"></textarea>
+                    <textarea rows="5"></textarea>
                 </div>
                 <div class="btn-area">
                     <input type="submit" value="Enviar" class="btn send-btn">
